--- a/templates/default.html
+++ b/templates/default.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="Stylesheet" type="text/css" href="%root_path%style.css" />
@@ -5,10 +6,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-    <a href="%root_path%index.html">Index</a> |
+    <a href="%root_path%index.html">index</a> |
+    <a href="%root_path%scratchpad.html">scratch</a> |
     <hr>
-    <div class="content" style="background-color: red;">
+    <main class="content">
     %content%
-    </div>
+    </main>
 </body>
 </html>
