--- a/templates/default.html
+++ b/templates/default.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <link rel="Stylesheet" type="text/css" href="%root_path%style.css" />
-    <title>%title%</title>
+    <title>olin.wiki - %title%</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
     <a href="%root_path%index.html">index</a> |
     <a href="%root_path%scratchpad.html">scratch</a> |
+    <a href="%root_path%links.html">länkar</a> |
     <hr>
     <main class="content">
     %content%
